@@ -93,6 +93,8 @@ Features wishes:
 - PR#6167: OCAMLPARAM support for disabling PIC generation ("pic=0")
   (Gabor Pali)
 - PR#6367: introduce Asttypes.arg_label to encode labelled arguments
+- PR#6452, GPR#140: add internal suport for custom printing formats
+  (Jérémie Dimino)
 - PR#6611: remove the option wrapper on optional arguments in the syntax tree
 - PR#6691: install .cmt[i] files for stdlib and compiler-libs
   (David Sheets, request by Gabriel Radanne)
